# jabali-isolator

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude-flow/data/: auto-memory-store.json  graph-state.json  intelligence-snapshot.json  ranked-context.json
.claude-flow/sessions/: session-1774734025022.json  session-1774820970920.json
docs/: CONTRIBUTING.md
docs/project/: codebase_audit.md
docs/project/.audit/: results_log.md
jabali_isolator/: __init__.py  __main__.py  config.py  container.py  machine.py  rootfs.py  units.py
tests/: conftest.py  test_container.py  test_rootfs.py  test_units.py
