[project]
name = "jabali-isolator"
version = "0.1.0"
description = "Lightweight nspawn container isolation for SSH shell access"
requires-python = ">=3.12"
dependencies = ["click>=8.0,<9"]

[project.scripts]
jabali-isolate = "jabali_isolator.__main__:cli"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "S"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[dependency-groups]
dev = [
    "pytest>=9.0.2,<10",
    "pytest-asyncio>=1.3.0,<2",
]
